Refactor game structure for improved maintainability and performance

--- a/games/idle-genesis/index.html
+++ b/games/idle-genesis/index.html
@@ -26,6 +26,7 @@
     <main class="idle-genesis-main">
         <section class="idle-card glass">
             <div class="counter-display" aria-live="polite" aria-atomic="true">
+                <p class="counter-version" id="buildVersion" aria-label="Idle Genesis build version"></p>
                 <span class="counter-value" id="counterValue">0</span>
                 <div class="counter-supplement">
                     <div class="supplement-row">
