--- a/games/idle-genesis/index.html
+++ b/games/idle-genesis/index.html
@@ -27,7 +27,10 @@
         <section class="idle-card glass">
             <div class="counter-display" aria-live="polite" aria-atomic="true">
                 <p class="counter-version" id="buildVersion" aria-label="Idle Genesis build version"></p>
-                <span class="counter-value" id="counterValue">0</span>
+                <div class="counter-value">
+                    <span class="counter-value__icon" aria-hidden="true">&#9889;</span>
+                    <span class="counter-value__amount" id="counterValue">0.00</span>
+                </div>
                 <div class="counter-supplement">
                     <div class="supplement-row">
                         <span class="supplement-label">Clicks</span>
@@ -40,7 +43,9 @@
                 </div>
             </div>
             <button class="btn btn-primary counter-button" type="button" id="chargeButton"
-                aria-label="Increase your Idle Genesis score">Click</button>
+                aria-label="Increase your Idle Genesis score">+&#9889;1.00</button>
+            <button class="btn btn-primary counter-button counter-boost-button" type="button" id="energyBoostButton" hidden
+                aria-label="Increase the amount of energy earned per manual activation">+&#9889;0.01 Yield</button>
         </section>
         <section class="idle-shop glass" aria-label="Idle Genesis Shop">
             <div class="shop-header">
