--- a/questing.html
+++ b/questing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./icons/quest.png">
-  <title>Quest Step Runner (Static)</title>
+  <title>Quest Step Runner</title>
   <style>
     :root {
       --bg: radial-gradient(circle at 18% 18%, #0d0a0c, #070506 64%);
